nginx/nginx-pod-cm.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace:
  labels:
    mykey: myvalue
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80
    volumeMounts:
      - name: config
        mountPath: /etc/nginx/conf.d
        readOnly: true
  volumes:
    - name: config
      configMap:
        name: nginx
