nginx/nginx-pod-init.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace:
  labels:
    thisisakey: thisisavalue
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80
    volumeMounts:
    - name: content-data
      mountPath: /usr/share/nginx/html
  volumes:
  - name: content-data
    emptyDir: {}
