nginx/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
  namespace:
spec:
  ports:
  - protocol: TCP
    port: 90
    targetPort: 80
  selector:
    run: nginx
  type: ClusterIP
